# CoolSolve

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  performance_plan.md  solver_fix_strategy.md
docs/: debugging_models.md
examples/: .gitignore  condenser_3zones.eescode  condenser_3zones.initials  condenser_3zones.initialsnotok  coolsolve.conf  exchangers1.eescode  exchangers1.initials  exchangers2.eescode  exchangers2.initials  exchangers3.eescode  exchangers3.initials  expander_module.eescode  expander_module.initials  humidair1.eescode  humidair1.initials  humidair2.eescode  humidair2.initials  orc_ammonia.eescode  orc_ammonia.initials  orc_co2.eescode  orc_co2.initials  orc_co2.initials_ok_but_linsearchfail  orc_co2.residuals_ok_but_singular_jacobian  orc_complex.eescode  orc_complex.initials  orc_extraction.eescode  orc_extraction.initials  orc_r245fa.eescode  orc_r245fa.initials  orc_simple.eescode  orc_simple.initials  orc_solar_complex.eescode  orc_solar_complex.initials  pressuredrop.eescode  pressuredrop.initials  rankine1.eescode  rankine1.initials  rankine2.eescode  rankine2.initials  refrigeration1.eescode  (+7 more)
include/coolsolve/: ast.h  autodiff_node.h  constants.h  evaluator.h  fluids.h  ir.h  parser.h  runner.h  solver.h  structural_analysis.h  units.h  variable_inference.h
src/: autodiff_node.cpp  constants.cpp  evaluator.cpp  fluids.cpp  ir.cpp  parser.cpp  runner.cpp  solver.cpp  structural_analysis.cpp  units.cpp  variable_inference.cpp
tests/: test_config.cpp  test_evaluator.cpp  test_examples.cpp  test_fluids.cpp  test_newton.cpp  test_parser.cpp  test_solver_integration.cpp  test_solver_pipeline.cpp
